# 8-Ball-Pool-2

./: CMakeLists.txt  vcpkg-configuration.json
src/: gamewidget.cpp  gamewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
